Fix overlapping issues on smaller devices

--- a/assets/css/_style.styl
+++ b/assets/css/_style.styl
@@ -1264,7 +1264,7 @@ fieldset[disabled] .btn-primary.active
   .contact .col-md-2 p
     text-align center
   .contact .quicklinks
-    margin 0 auto 0 10%
+    margin 0 auto 0 8%
     width 90%
   .contact .quicklinks li
     display inline-block
